--- a/.github/workflows/main_gym-lega.yml
+++ b/.github/workflows/main_gym-lega.yml
@@ -24,11 +24,10 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install
-          npm run build --if-present
-          npm run test --if-present
+          npm run build
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip -r release.zip ./dist
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -67,5 +66,5 @@ jobs:
         with:
           app-name: 'gym-lega'
           slot-name: 'Production'
-          package: .
+          package: ./dist
           
